--- a/Example/SampleApp/CBTableViewCell.xib
+++ b/Example/SampleApp/CBTableViewCell.xib
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -16,89 +15,48 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="166"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="166"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="165.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WPf-i4-KOs">
-                        <rect key="frame" x="0.0" y="0.0" width="54" height="54.5"/>
-                        <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y6J-OF-WSE">
+                        <rect key="frame" x="8" y="164.5" width="312" height="1"/>
+                        <color key="backgroundColor" red="0.17613056299999999" green="0.59784334900000002" blue="0.92846614120000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="54" id="g8v-RP-ehx"/>
+                            <constraint firstAttribute="height" constant="1" id="IB9-7q-IMg"/>
                         </constraints>
                     </view>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hqc-9q-KPa">
-                        <rect key="frame" x="266" y="111" width="54" height="54"/>
-                        <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="40u-UR-goA">
+                        <rect key="frame" x="8" y="8" width="60" height="60"/>
+                        <color key="backgroundColor" red="0.98589378599999999" green="0.53949773310000004" blue="0.37853512169999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="54" id="HfJ-vf-F87"/>
+                            <constraint firstAttribute="width" secondItem="40u-UR-goA" secondAttribute="height" id="GZo-7u-a6j"/>
+                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="60" id="qdZ-ql-ZcS"/>
                         </constraints>
-                    </view>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sps-lE-vs0">
-                        <rect key="frame" x="8" y="72.5" width="304" height="20.5"/>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sps-lE-vs0">
+                        <rect key="frame" x="76" y="8" width="236" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TpS-5w-OrI">
-                        <rect key="frame" x="266" y="0.0" width="54" height="54.5"/>
-                        <color key="backgroundColor" red="0.17613056299999999" green="0.59784334900000002" blue="0.92846614120000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="54" id="Bb5-Ev-aJZ"/>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="xmA-lG-duH"/>
-                        </constraints>
-                    </view>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0On-b6-EB0">
-                        <rect key="frame" x="0.0" y="112" width="54" height="54"/>
-                        <color key="backgroundColor" red="0.17613056299999999" green="0.59784334900000002" blue="0.92846614120000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="2Fo-xf-xAJ"/>
-                            <constraint firstAttribute="width" constant="54" id="aju-lF-yj0"/>
-                        </constraints>
-                    </view>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y6J-OF-WSE">
-                        <rect key="frame" x="62" y="158" width="196" height="8"/>
-                        <color key="backgroundColor" red="0.17613056299999999" green="0.59784334900000002" blue="0.92846614120000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="8" id="IB9-7q-IMg"/>
-                        </constraints>
-                    </view>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TOV-b4-yMJ">
-                        <rect key="frame" x="62" y="0.0" width="196" height="8"/>
-                        <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="8" id="5R2-Dj-bKv"/>
-                        </constraints>
-                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="TpS-5w-OrI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="0Vz-LN-G0t"/>
-                    <constraint firstAttribute="trailing" secondItem="TpS-5w-OrI" secondAttribute="trailing" id="1dB-Lm-ANx"/>
-                    <constraint firstItem="0On-b6-EB0" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="2ov-To-bT0"/>
-                    <constraint firstItem="sps-lE-vs0" firstAttribute="top" secondItem="WPf-i4-KOs" secondAttribute="bottom" constant="18" id="4hg-e6-2cj"/>
-                    <constraint firstItem="Hqc-9q-KPa" firstAttribute="height" secondItem="TpS-5w-OrI" secondAttribute="height" id="6Sy-yg-Cej"/>
-                    <constraint firstItem="0On-b6-EB0" firstAttribute="height" secondItem="WPf-i4-KOs" secondAttribute="height" id="9fD-NM-Mco"/>
-                    <constraint firstItem="y6J-OF-WSE" firstAttribute="leading" secondItem="0On-b6-EB0" secondAttribute="trailing" constant="8" id="FOd-31-2p2"/>
-                    <constraint firstItem="TOV-b4-yMJ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="HVd-y0-WRn"/>
-                    <constraint firstAttribute="bottom" secondItem="0On-b6-EB0" secondAttribute="bottom" id="MVI-dc-qSe"/>
-                    <constraint firstItem="sps-lE-vs0" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="MsG-Ug-Imo"/>
-                    <constraint firstItem="TpS-5w-OrI" firstAttribute="leading" secondItem="TOV-b4-yMJ" secondAttribute="trailing" constant="8" id="N62-7w-6eQ"/>
-                    <constraint firstItem="WPf-i4-KOs" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="ORV-q8-aR8"/>
-                    <constraint firstItem="TOV-b4-yMJ" firstAttribute="leading" secondItem="WPf-i4-KOs" secondAttribute="trailing" constant="8" id="SqV-KB-Rnc"/>
-                    <constraint firstItem="Hqc-9q-KPa" firstAttribute="leading" secondItem="y6J-OF-WSE" secondAttribute="trailing" constant="8" id="UxW-k3-mIk"/>
-                    <constraint firstAttribute="trailing" secondItem="Hqc-9q-KPa" secondAttribute="trailing" id="Vtf-Gk-ZNb"/>
-                    <constraint firstItem="WPf-i4-KOs" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="kHw-7G-N3F"/>
-                    <constraint firstItem="Hqc-9q-KPa" firstAttribute="top" secondItem="sps-lE-vs0" secondAttribute="bottom" constant="18" id="na5-OC-iIh"/>
-                    <constraint firstAttribute="bottom" secondItem="Hqc-9q-KPa" secondAttribute="bottom" constant="0.5" id="pLo-wa-j4Z"/>
+                    <constraint firstItem="sps-lE-vs0" firstAttribute="leading" secondItem="40u-UR-goA" secondAttribute="trailing" constant="8" id="5eI-IO-gu2"/>
+                    <constraint firstItem="sps-lE-vs0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="789-sb-Xrf"/>
+                    <constraint firstItem="y6J-OF-WSE" firstAttribute="top" relation="greaterThanOrEqual" secondItem="sps-lE-vs0" secondAttribute="bottom" constant="8" id="hQ9-Yb-Vuc"/>
+                    <constraint firstItem="40u-UR-goA" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="inc-tf-Rj1"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="40u-UR-goA" secondAttribute="bottom" constant="8" id="jOf-Ew-tba"/>
+                    <constraint firstItem="40u-UR-goA" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="k5F-vy-hHF"/>
+                    <constraint firstAttribute="trailing" secondItem="sps-lE-vs0" secondAttribute="trailing" constant="8" id="sGp-yA-NOZ"/>
+                    <constraint firstAttribute="trailing" secondItem="y6J-OF-WSE" secondAttribute="trailing" id="tTO-1Q-2Kq"/>
                     <constraint firstAttribute="bottom" secondItem="y6J-OF-WSE" secondAttribute="bottom" id="vmr-1h-NK6"/>
-                    <constraint firstItem="sps-lE-vs0" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="vwK-ad-2KG"/>
-                    <constraint firstItem="sps-lE-vs0" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="w5v-Ns-LFh"/>
-                    <constraint firstItem="sps-lE-vs0" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="yNo-es-EwD"/>
+                    <constraint firstItem="y6J-OF-WSE" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="wLE-c2-W73"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="centerLabel" destination="sps-lE-vs0" id="xlW-ms-JPL"/>
             </connections>
-            <point key="canvasLocation" x="25" y="113"/>
+            <point key="canvasLocation" x="24" y="112.44377811094454"/>
         </tableViewCell>
     </objects>
 </document>
